tests/compile_fail/invalid_style_url_literal.rs
use surgeist_style::StyleUrl;

fn main() {
    let _url = StyleUrl(String::from("x.png"));
}
