tests/compile_fail/invalid_style_url_literal.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_style_url_literal.rs:4:16
  |
4 |     let _url = StyleUrl(String::from("x.png"));
  |                ^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct StyleUrl(String);
  |                     ^^^^^^ private field
